<resources>
    <string name="app_name">Strawpoll</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startStrawpollButton">Create your own strawpoll in seconds!</string>
    <string name="answerHint">Answer</string>
    <string name="questionHint">Question</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="nextButton">next</string>
    <string name="createButton">Create</string>
    <string name="voteButton">vote</string>
    <string name="share">share</string>
    <string name="share_success_text">Check out this awesome poll I found on The Strawpoll App!</string>
    <string name="discover">Discover</string>
    <string name="aboutText">De strawpoll app is een applicatie waarmee je een eigen strawpoll kan maken en delen met je vrienden. Het voting systeem gebeurt annoniem en zonder gegevens bij te houden van de gebruiker. Het aanmaken van een strawpoll is zeer simpel en flexibel.</string>
    <string name="aboutTitle">About</string>
    <string name="strawpollListItemImageDescription">Total Votes Image</string>
    <string name="listStatus">StatusImage</string>
    <string name="lijnNummer">0.</string>
    <string name="pollWarning">The content of polls is neither created nor endorsed by strawpoll.</string>
</resources>